Bug 282746 - digikam - scroll after image view
Summary: digikam - scroll after image view
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Albums-MainView (other bugs)
Version First Reported In: 2.1.1
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-09-25 17:31 UTC by Petr Bohac
Modified: 2012-06-27 10:12 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.3.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Petr Bohac 2011-09-25 17:31:07 UTC
Version:           2.0.0 (using KDE 4.6.5) 
OS:                Linux

digikam in album view scrolls selected image on top after exiting image view

Reproducible: Always

Steps to Reproduce:
open image and then exit view. Does not appears when album is scrolled on the top (as well as when scrolled to the bottom as it makes no sense).

Actual Results:  
last vewd image is scrolled on the top of album view

Expected Results:  
album view should stay in same place if possible. If moved in image viewer out of scroll view then:
- if going forward, last viewd image should be on the bottom
- if going backward, last viewd image should be on the top (actual state)

affects at least versions 2.0 and 2.1.x, 2.2 not tested. 1.9 was OK.
Comment 1 Marcel Wiesweg 2011-11-02 21:55:34 UTC
Git commit fabe7d118c4ff17685038a2b91494e9761d26a91 by Marcel Wiesweg.
Committed on 29/10/2011 at 15:15.
Pushed by mwiesweg into branch 'master'.

Relax scrollTo with AtTop hint in resizeEvent for DCategorizedView

For me, mostly fixes the problem that current item always jumps to top
when returning from preview. Regressions unknown.
More sophisticated handling is possible, but even more bound to
produce regressions.

BUG: 282746

M  +1    -1    libs/widgets/itemview/dcategorizedview.cpp

http://commits.kde.org/digikam/fabe7d118c4ff17685038a2b91494e9761d26a91