Relax scrollTo with AtTop hint in resizeEvent for DCategorizedView

For me, mostly fixes the problem that current item always jumps to top
when returning from preview. Regressions unknown.
More sophisticated handling is possible, but even more bound to
produce regressions.

BUG: 282746